# ibm-storage-scale-mcp-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.bob/notes/: pending-notes.txt
.github/workflows/: ci.yml
config/: scale_config.ini.example
scripts/: clean.sh  dev-tool.sh
scripts/tools/: list_tools.py
src/scale_mcp_server/: server.py
src/scale_mcp_server/adapters/: base.py  fileops.py  local_executor.py  ssh_executor.py
src/scale_mcp_server/api/v2/: filesystems.py  nodes.py
src/scale_mcp_server/api/v3/: afm.py  afmcos.py  api_health.py  authorization.py  clusters.py  config.py  diagnostics.py  filesets.py  filesystem_disks.py  filesystems.py  health.py  managers.py  node_classes.py  nodes.py  nsds.py  operations.py  policies.py  quotas.py  remote_clusters.py  remote_filesystems.py  snapshots.py  storage_pools.py  troubleshooting.py  version.py  xcp.py
src/scale_mcp_server/tools/cli/: policies.py
src/scale_mcp_server/tools/v2/: filesystems_health.py  nodes_health.py
src/scale_mcp_server/tools/v3/: afm.py  afmcos.py  api_health.py  authorization.py  clusters.py  config.py  diagnostics.py  filesets.py  filesystem_disks.py  filesystems.py  health.py  managers.py  node_classes.py  nodes.py  nsds.py  operations.py  policies.py  quotas.py  remote_clusters.py  remote_filesystems.py  snapshots.py  storage_pools.py  troubleshooting.py  version.py  xcp.py
src/scale_mcp_server/utils/: client.py  helpers.py  read_config.py
tests/: conftest.py  contracts.py  test_client.py  test_endpoint_contracts.py  test_hardening.py  test_server_registration.py
