[project]
name = "scale-mcp-server"
version = "1.0.0"
description = "IBM Storage Scale MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "fastmcp>=3.1.0",
 "httpx>=0.27.0",
 "paramiko>=4.0.0",
]

[dependency-groups]
dev = [
 "pytest>=8.0.0",
 "pytest-asyncio>=0.25.0",
 "respx>=0.22.0",
 "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[project.scripts]
scale-mcp-server = "scale_mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
