[project]
name = "scale-mcp-server"
version = "1.0.0"
description = "IBM Storage Scale MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "fastmcp>=3.1.0",
 "httpx>=0.27.0",
 "paramiko>=4.0.0",
]

[dependency-groups]
dev = [
 "pytest>=8.0.0",
 "pytest-asyncio>=0.25.0",
 "respx>=0.22.0",
 "ruff>=0.8.0",
 "pip-audit>=2.7.0",
 "pre-commit>=4.0.0",
]

[tool.uv]
# Constrain transitive dependencies to versions that resolve known CVEs
# (surfaced by pip-audit). These are not direct dependencies; the bounds only
# steer the resolver away from the vulnerable releases.
constraint-dependencies = [
 "mcp>=1.28.1",       # CVE-2026-52870, CVE-2026-52869, CVE-2026-59950
 "click>=8.3.3",      # PYSEC-2026-2132
]

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[project.scripts]
scale-mcp-server = "scale_mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear, SIM: simplify
select = ["E", "F", "I", "UP", "B", "SIM"]
